@@ -260,7 +260,7 @@ class LoadNode {
         if (mapping.isEmpty()) {
             return new HashMap<>();
         }
-        String realImp = mapping.get(0);
+        String realImp = mapping.getFirst();
         if (!dirty && counts.containsKey(realImp)) {
             // Return pre-calculated value
             return counts.get(realImp);
@@ -292,9 +292,8 @@ class LoadNode {
      * the line. Print one line starting with the three keys in "chassis:model:pilot::" format. Each line contains all
      * imperatives in "ammoType:munition1[:munition2[...]]::ammoType2..." format. 2. This is a node. 1~2 keys have been
      * passed in; pass these to leaves. 3. This is the root. Iterate over all child keys and pass them to the children.
-     *
-     * If case 1 but a key value is blank, replace with "any".
-     * Always use "any" for pilot when dumping imperatives.
+     * <p>
+     * If case 1 but a key value is blank, replace with "any". Always use "any" for pilot when dumping imperatives.
      */
     public StringBuilder dumpTextFormat(String... keys) {
         StringBuilder sb = new StringBuilder();
